--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,11 +10,15 @@ services:
       - AUTH_SERVICE_URL=http://auth-service:5002
       - PRODUCT_SERVICE_URL=http://product-service:5003
       - ORDER_SERVICE_URL=http://order-service:5004
+      - INVENTORY_SERVICE_URL=http://inventory-service:5005
+      - CART_SERVICE_URL=http://cart-service:5006
     depends_on:
       - user-service
       - auth-service
       # - product-service
       # - order-service
+      - inventory-service
+      - cart-service
     networks:
       - ecommerce-network
 
@@ -65,6 +69,30 @@ services:
   #   restart: always
   #   networks:
   #     - ecommerce-network
+
+  inventory-service:
+    build: ./inventory-service
+    ports:
+      - "5013:5005"
+    depends_on:
+      - mongo
+    environment:
+      - MONGO_URI=mongodb+srv://Itp1234:Itp1234@cluster1.7wgentw.mongodb.net/LOgix_Fleet_Management_System_db?retryWrites=true&w=majority
+    restart: always
+    networks:
+      - ecommerce-network
+
+  cart-service:
+    build: ./cart-service
+    ports:
+      - "5014:5006"
+    depends_on:
+      - mongo
+    environment:
+      - MONGO_URI=mongodb+srv://Itp1234:Itp1234@cluster1.7wgentw.mongodb.net/LOgix_Fleet_Management_System_db?retryWrites=true&w=majority
+    restart: always
+    networks:
+      - ecommerce-network
 
   mongo:
     image: mongo:latest
