--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,13 +12,15 @@ services:
       - ORDER_SERVICE_URL=http://order-service:5004
       - INVENTORY_SERVICE_URL=http://inventory-service:5005
       - CART_SERVICE_URL=http://cart-service:5006
+      - PAYMENT_SERVICE_URL=http://payment-service:5007
     depends_on:
       - user-service
       - auth-service
-      # - product-service
-      # - order-service
+      - product-service
+      - order-service
       - inventory-service
       - cart-service
+      - payment-service
     networks:
       - ecommerce-network
 
@@ -86,6 +88,18 @@ services:
     build: ./cart-service
     ports:
       - "5014:5006"
+    depends_on:
+      - mongo
+    environment:
+      - MONGO_URI=mongodb+srv://Itp1234:Itp1234@cluster1.7wgentw.mongodb.net/LOgix_Fleet_Management_System_db?retryWrites=true&w=majority
+    restart: always
+    networks:
+      - ecommerce-network
+
+  payment-service:
+    build: ./payment-service
+    ports:
+      - "5015:5007"
     depends_on:
       - mongo
     environment:
